x/programs/rust/sdk-macros/tests/ui/fail/state-keys-named-variant-field.stderr
error: enums with named fields are not supported
 --> tests/ui/fail/state-keys-named-variant-field.rs:7:5
  |
7 |     Invalid { foo: u8 },
  |     ^^^^^^^
